# random-reminder

./: LICENSE  README.md  break_window.py  main.py  main_window.py  progress_display.py  pyproject.toml  sound_manager.py  timer_thread.py  随机提醒.spec
