[project]
name = "random-reminder"
version = "0.1.0"
description = "随机提醒应用 - 帮助您在工作时定时休息"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyinstaller>=6.13.0",
    "PyQt6",
    "pyqt6-tools>=6.4.2.3.3",
]

[[tool.uv.index]]
url = "https://pypi.mirrors.ustc.edu.cn/simple/"
default = true
